syntax = "proto3";

option go_package = "source/proto";

package proto;

service PostPostService{
    rpc PostPost(PostPostRequest) returns (PostPostReply) {};
    rpc DelArticle(DelArticleRequest) returns (DelArticleReply) {};
}

message PostPostRequest {
    int64  userId = 1;
    string content = 2;
    string visibility = 3;
}

message PostPostReply {
    bool success = 1;
}

message DelArticleRequest {
    int64 userId = 1;
    int64 articleId = 2;
}

message DelArticleReply {
    bool success = 1;
}
